Fix background scroll and table spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -305,6 +305,8 @@ h3 {
     padding-left: 15px;
     padding-right: 15px;
     margin-bottom: 15px;
+
+    background-color: white;
 }
 
 .title-spacer {
@@ -320,7 +322,7 @@ h3 {
     margin-bottom: 0px;
 }
 
-td {
+td, th {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
